# mathtexts

./: README.md  info
RussianDependencyParser/: CMakeLists.txt  README.md  correctDictionary.py  generateSentence.py  genhashtable.cpp  install.sh  launch.sh  main.cpp  model.cpp  model.h  newmmodel.txt  output.txt  test1142.xml
RussianDependencyParser/TurboParser-2.3.0/src/classifier/: Reader.h
RussianDependencyParser/TurboParser-2.3.0/src/tagger/: Makefile.am
report/: .BYUPhys.cls.swp  BYUPhys.cls  Chapter1.aux  Chapter1.tex  Chapter2.aux  Chapter2.tex  Chapter3.aux  Chapter3.tex  Chapter4.aux  Chapter4.tex  Chapter5.aux  Chapter5.tex  references.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.out  thesis.tex  thesis.toc
word2vecf/: launch.sh
word2vecf/cxx/: Makefile  extract_deps.cpp  vocab.cpp
